feat: ability to set custom paper size and orientation (#110)
Refs: #109
